# wtn

./: Makefile  README.md  README.md.jinja  pyproject.toml
.github/workflows/: fetch.yml
data/: ratings.csv
src/: constants.py  data.py  main.py
