[tool.poetry]
name = "wtn"
version = "0.1.0"
description = ""
authors = ["James White <dev.jameswhite@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
parsel = "^1.9.1"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
